finished the assignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@
 
 /* 3. Font size should be twice the normal size  */
 
-
+h1, h2 {
+  text-align: center;
+  margin: 10px;
+  font-size: 200%;
+}
 
 
 
@@ -33,7 +37,18 @@
   /* 8. Add a solid black 3px border */
 
   /* 9. Round the corners */
-
+.grid {
+  width: 800px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  grid-gap: 10px;
+  background-color: #91f321;
+  background-image:url("../images/background.jpg");
+  border: 3px solid black;
+  border-radius: 20px;
+  justify-content: space-around;
+}
 
 
 
@@ -54,7 +69,13 @@
 /* 4. Add 20px of padding */
 
 /* 5. Set a font-size of 30px   */
-
+.grid > div {
+  border: 5px solid white;
+  background-color: rgba(231, 157, 224, 0.5);
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
+}
 
 
 
@@ -69,3 +90,23 @@
 
 /* Now try and style the individual boxes using grid-column  to match the picture at 1200px.*/
 
+.item2, .item5 {
+  grid-column-start: 3;
+}
+
+.item3 {
+  grid-column-start: 2;
+}
+
+.item4 {
+  grid-column-start: 1;
+}
+
+.item_a {
+  grid-column-start: 3;
+  grid-row-start: 3;
+}
+
+.item_b {
+  grid-column-start: 3;
+}
